# Medical-hackathon

./: .gitignore  README.md  render.yaml
.github/: copilot-instructions.md
.github/workflows/: keepalive.yml
backend/: .env.example  pyproject.toml  requirements.txt
backend/app/: config.py  main.py
backend/app/api/: predict.py
backend/app/schemas/: biomarker.py  predict.py  reference_case.py
backend/app/services/: __init__.py  biomarker_extraction.py  biomarker_masks.py  concerns.py  image_dataset.py  image_predict.py  matching.py  mock_predict.py  preprocessing.py  reference_cases.py
backend/data/: calibration.json  cases.csv  reference_cases.csv
backend/data/derived/: reference_cache.json
backend/scripts/: build_calibration.py  generate_demo_images.py  generate_reference_images.py  import_dataset.py
backend/tests/: test_biomarker_erythema_coverage.py  test_biomarker_extraction_contract.py  test_biomarker_inflammation.py  test_biomarker_masks.py  test_biomarker_skin_tone.py  test_biomarker_texture_dryness.py  test_concerns.py  test_likelihood_aggregation.py  test_matching_ranking.py  test_matching_vectorization.py  test_predict_api.py  test_preprocessing.py  test_reference_case_deidentification.py  test_reference_case_repository.py  test_reference_data_seed.py
data/: reference_cases.csv
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.node.json  vercel.json  vite.config.ts
frontend/src/: App.tsx  (+3 more)
src/: run_demo.py
tests/: test_explain.py  test_integration_predict.py  test_matcher.py  test_vectorizer.py
(+33 files in other folders)
