[project]
name = "dermamatch-backend"
version = "0.1.0"
description = "FastAPI walking skeleton for DermaMatch mock response predictions"
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.115,<0.117",
  "uvicorn[standard]>=0.34,<0.36",
  "pydantic>=2.10,<3",
  "pydantic-settings>=2.7,<3",
  "python-multipart>=0.0.12,<0.1",
  "Pillow>=10,<12",
  "numpy>=1.26,<2",
  "opencv-python-headless>=4.9,<4.11",
  "scikit-image>=0.22,<0.23",
]

[project.optional-dependencies]
data = ["Pillow>=10,<12", "openpyxl>=3.1,<4"]
test = ["pytest>=8.3,<9", "httpx>=0.27,<0.29"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
